--- a/phase1/index.html
+++ b/phase1/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Phase1</title>
+  <title>Phase1_Udemy</title>
 </head>
 <body>
+  Welcome to India Tourism!
+
+  Thank You!
   
 </body>
 </html>
